--- a/index.html
+++ b/index.html
@@ -7,30 +7,57 @@
     <title>law association</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://kit.fontawesome.com/078d194c95.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-    <header>
+    <header class="container mx-auto">
         <div class="flex justify-between items-center px-6 py-6">
             <div class="flex items-center space-x-3 ">
                 <img src="images/business.png" alt="">
                 <h1 class="text-3xl">justice</h1>
 
             </div>
-            <div class="space-x-6">
-                <a href="home">home</a>
-                <a href="home">home</a>
-                <a href="home">home</a>
-                <a href="home">home</a>
-                <a href="home">home</a>
+            <div class="space-x-6 text-2xl sm:hidden md:hidden lg:flex">
+                <a href="home">home<i class="fa-solid fa-chevron-right"></i></a>
+                <a href="home">home <i class="fa-solid fa-chevron-right"></i></a>
+                <a href="home">home <i class="fa-solid fa-chevron-right"></i></a>
+                <a href="home">home <i class="fa-solid fa-chevron-right"></i></a>
+                <a href="home">home <i class="fa-solid fa-chevron-right"></i></a>
 
+            </div>
+            <div>
+                <h1 class="lg:hidden bg-orange-300 rounded-md">know more</h1>
             </div>
 
             <div>
-                <button class="bg-red-600 px-3 py-3 rounded-md">Free consulation</button>
+                <button class="bg-orange-500 px-3 py-3 rounded-md opacity-3 hover:bg-slate-500 duration-75 ">Free
+                    consulation</button>
             </div>
+
     </header>
+    <div
+        class=" container mx-auto h-96 bg-[url('/images/banner.png')] bg-origin-content justify-center text-center text-zinc-50 items-center">
+        <div>
+            <div class="py-10">
+                <h3 class="text-4xl my-10">We Provide Effective
+                    Legal Solutions
+                </h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority <br>
+                    have suffered alteration in some form, by injected humour</p>
+            </div>
+
+            <div class="flex text-center justify-center space-x-6 rounded-md">
+                <form>
+                    <input class="px-28 justify-start items-start py-3" type="text" name="" id=""
+                        placeholder="right your services">
+                </form>
+                <button class="bg-orange-600 px-3 py-3 rounded-md">search</button>
+            </div>
+
+        </div>
+    </div>
 </body>
 
 </html>
