--- a/index.html
+++ b/index.html
@@ -58,6 +58,128 @@
 
         </div>
     </div>
+    <section class="container mx-auto ">
+        <div class=" grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-auto  space-x-3 ">
+            <div class="bg-green-500 h-60 w-auto my-4 p-8 ">
+                <div class="flex justify-center items-center text-center">
+                    <img src="images/business.png" alt="">
+                </div>
+                <div class="text-center">
+                    <h1>Business Law</h1>
+                    <p>There are many variations of
+                        passages of Lorem Ipsum
+                        available, but the majority have
+                        suffered alteration in some
+                        form, by injected humour.</p>
+                </div>
+                <div class="items-center justify-center text-center">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+
+
+
+            </div>
+            <div class="bg-green-500 h-60 w-auto my-4 p-8 ">
+                <div class="flex justify-center items-center text-center">
+                    <img src="images/business.png" alt="">
+                </div>
+                <div class="text-center">
+                    <h1>Business Law</h1>
+                    <p>There are many variations of
+                        passages of Lorem Ipsum
+                        available, but the majority have
+                        suffered alteration in some
+                        form, by injected humour.</p>
+                </div>
+                <div class="items-center justify-center text-center">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+
+
+
+            </div>
+            <div class="bg-green-500 h-60 w-auto my-4 p-8 ">
+                <div class="flex justify-center items-center text-center">
+                    <img src="images/business.png" alt="">
+                </div>
+                <div class="text-center">
+                    <h1>Business Law</h1>
+                    <p>There are many variations of
+                        passages of Lorem Ipsum
+                        available, but the majority have
+                        suffered alteration in some
+                        form, by injected humour.</p>
+                </div>
+                <div class="items-center justify-center text-center">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+
+
+
+            </div>
+            <div class="bg-green-500 h-60 w-auto my-4 p-8 ">
+                <div class="flex justify-center items-center text-center">
+                    <img src="images/business.png" alt="">
+                </div>
+                <div class="text-center">
+                    <h1>Business Law</h1>
+                    <p>There are many variations of
+                        passages of Lorem Ipsum
+                        available, but the majority have
+                        suffered alteration in some
+                        form, by injected humour.</p>
+                </div>
+                <div class="items-center justify-center text-center">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+
+
+
+            </div>
+            <div class="bg-green-500 h-60 w-auto my-4 p-8 ">
+                <div class="flex justify-center items-center text-center">
+                    <img src="images/business.png" alt="">
+                </div>
+                <div class="text-center">
+                    <h1>Business Law</h1>
+                    <p>There are many variations of
+                        passages of Lorem Ipsum
+                        available, but the majority have
+                        suffered alteration in some
+                        form, by injected humour.</p>
+                </div>
+                <div class="items-center justify-center text-center">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+
+
+
+            </div>
+            <div class="bg-green-500 h-60 w-auto my-x p-8 ">
+                <div class="flex justify-center items-center text-center">
+                    <img src="images/business.png" alt="">
+                </div>
+                <div class="text-center">
+                    <h1>Business Law</h1>
+                    <p>There are many variations of
+                        passages of Lorem Ipsum
+                        available, but the majority have
+                        suffered alteration in some
+                        form, by injected humour.</p>
+                </div>
+                <div class="items-center justify-center text-center">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+
+
+
+            </div>
+
+        </div>
+    </section>
+
+
+
 </body>
 
 </html>
