--- a/index.html
+++ b/index.html
@@ -176,7 +176,110 @@
             </div>
 
         </div>
+        <div class="carousel w-full">
+            <div id="item1" class="carousel-item w-full">
+                <img src="images/slider-1.jpg" class="w-full" />
+                <h1 class="text-red-500">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, facilis.</h1>
+            </div>
+            <div id="item2" class="carousel-item w-full">
+                <img src="images/slider-2.jpg" class="w-full" />
+            </div>
+            <div id="item3" class="carousel-item w-full">
+                <img src="images/slider-3.jpg" class="w-full" />
+            </div>
 
+        </div>
+        <div class="flex w-full justify-center gap-2 py-2">
+            <a href="#item1" class="btn btn-xs">1</a>
+            <a href="#item2" class="btn btn-xs">2</a>
+            <a href="#item3" class="btn btn-xs">3</a>
+
+        </div>
+
+    </section>
+    <section class="flex sm:flex-col justify-center items-center space-x-20 my-10">
+        <div>
+            <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" checked="checked" />
+                <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                <div class="collapse-content">
+                    <p>hello</p>
+                </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" />
+                <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                <div class="collapse-content">
+                    <p>hello</p>
+                </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" />
+                <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                <div class="collapse-content">
+                    <p>hello</p>
+                </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" />
+                <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                <div class="collapse-content">
+                    <p>hello</p>
+                </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" />
+                <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                <div class="collapse-content">
+                    <p>hello</p>
+                </div>
+            </div>
+        </div>
+        <div>
+            <img src="images/faq.png" alt="">
+        </div>
+    </section>
+    <section class="flex md:flex-col sm:flex-col">
+        <footer class="footer bg-base-200 text-base-content p-10 my-6 ">
+            <div>
+                <nav class="flex text-center items-center space-x-6 ">
+                    <img src="images/business.png" alt="">
+                    <h1 class="text-3xl ">justice</h1>
+                </nav>
+            </div>
+
+
+            <nav>
+                <h6 class="footer-title">Useful link</h6>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">contact</h6>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+
+            <form>
+                <h6 class="footer-title">Subscribe</h6>
+                <p>Subscribe for our latest &
+                    Articles. We Won t Give You
+                    Spam Mails</p>
+                <fieldset class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text">Enter your email address</span>
+                    </label>
+                    <div class="join">
+                        <input type="text" placeholder="username@site.com" class="input input-bordered join-item" />
+                        <button class="btn btn-primary join-item">Subscribe</button>
+                    </div>
+                </fieldset>
+            </form>
+        </footer>
     </section>
 
 
