--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             </div>
             <div>
-                <h1 class="lg:hidden bg-orange-300 rounded-md">know more</h1>
+                <h1 class="lg:hidden sm:hidden  bg-orange-300 rounded-md">know more</h1>
             </div>
 
             <div>
@@ -59,8 +59,8 @@
         </div>
     </div>
     <section class="container mx-auto ">
-        <div class=" grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-auto  space-x-3 ">
-            <div class="bg-green-500 h-60 w-auto my-4 p-8 ">
+        <div class=" grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-auto   ">
+            <div class="bg-green-500 h-auto w-auto shadow-inner  p-8 ">
                 <div class="flex justify-center items-center text-center">
                     <img src="images/business.png" alt="">
                 </div>
@@ -79,7 +79,7 @@
 
 
             </div>
-            <div class="bg-green-500 h-60 w-auto my-4 p-8 ">
+            <div class="bg-green-500 h-auto w-auto shadow-inner p-8 ">
                 <div class="flex justify-center items-center text-center">
                     <img src="images/business.png" alt="">
                 </div>
@@ -98,7 +98,7 @@
 
 
             </div>
-            <div class="bg-green-500 h-60 w-auto my-4 p-8 ">
+            <div class="bg-green-500 h-auto w-auto shadow-inner  p-8 ">
                 <div class="flex justify-center items-center text-center">
                     <img src="images/business.png" alt="">
                 </div>
@@ -117,7 +117,7 @@
 
 
             </div>
-            <div class="bg-green-500 h-60 w-auto my-4 p-8 ">
+            <div class="bg-green-500 h-auto w-auto p-8 ">
                 <div class="flex justify-center items-center text-center">
                     <img src="images/business.png" alt="">
                 </div>
@@ -136,7 +136,7 @@
 
 
             </div>
-            <div class="bg-green-500 h-60 w-auto my-4 p-8 ">
+            <div class="bg-green-500 h-auto w-auto  p-8 ">
                 <div class="flex justify-center items-center text-center">
                     <img src="images/business.png" alt="">
                 </div>
@@ -155,7 +155,7 @@
 
 
             </div>
-            <div class="bg-green-500 h-60 w-auto my-x p-8 ">
+            <div class="bg-green-500 h-auto w-auto my-x p-8 ">
                 <div class="flex justify-center items-center text-center">
                     <img src="images/business.png" alt="">
                 </div>
@@ -197,7 +197,7 @@
         </div>
 
     </section>
-    <section class="flex sm:flex-col justify-center items-center space-x-20 my-10">
+    <section class="flex sm:flex-col md:flex-col justify-center items-center space-x-20 my-10">
         <div>
             <div class="collapse collapse-plus bg-base-200">
                 <input type="radio" name="my-accordion-3" checked="checked" />
