--- a/index.html
+++ b/index.html
@@ -176,17 +176,35 @@
             </div>
 
         </div>
-        <div class="carousel w-full">
-            <div id="item1" class="carousel-item w-full">
+        <div class="carousel w-full my-4">
+            <div id="item1" class="carousel-item relative w-[300] h-[300]">
                 <img src="images/slider-1.jpg" class="w-full" />
-                <h1 class="text-red-500">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, facilis.</h1>
+                <div class="absolute top-2/4 left-96 text-center text-red-500 ">
+                    <button class="text-center">know me</button>
+                    <h3>ui/ux desingner</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, blanditiis.</p>
+                </div>
+
             </div>
-            <div id="item2" class="carousel-item w-full">
+            <div id="item1" class="carousel-item relative w-[300] h-[300]">
                 <img src="images/slider-2.jpg" class="w-full" />
+                <div class="absolute top-2/4 left-96 text-center text-red-500 ">
+                    <button class="text-center">know me</button>
+                    <h3>ui/ux desingner</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, blanditiis.</p>
+                </div>
+
             </div>
-            <div id="item3" class="carousel-item w-full">
+            <div id="item1" class="carousel-item relative w-[300] h-[300]">
                 <img src="images/slider-3.jpg" class="w-full" />
+                <div class="absolute top-2/4 left-96 text-center text-red-500 ">
+                    <button class="text-center">know me</button>
+                    <h3>ui/ux desingner</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, blanditiis.</p>
+                </div>
+
             </div>
+
 
         </div>
         <div class="flex w-full justify-center gap-2 py-2">
