--- a/index.html
+++ b/index.html
@@ -292,8 +292,9 @@
                         <span class="label-text">Enter your email address</span>
                     </label>
                     <div class="join">
-                        <input type="text" placeholder="username@site.com" class="input input-bordered join-item" />
-                        <button class="btn btn-primary join-item">Subscribe</button>
+                        <input type="text" placeholder="username@site.com"
+                            class="input input-bordered join-item px-6" />
+                        <button class="btn btn-primary join-item px-6">Subscribe</button>
                     </div>
                 </fieldset>
             </form>
