--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
             <div class="flex text-center justify-center space-x-6 rounded-md">
                 <form>
-                    <input class="px-28 justify-start items-start" type="text" name="" id=""
-                        placeholder="right your services">
+                    <input class="px-28 justify-start items-start lg:py-4 sm:px-1 py-1 md:px-1 py-1" type="text" name=""
+                        id="" placeholder="right your services">
                 </form>
-                <button class="bg-orange-600 px-1 rounded-md">search</button>
+                <button class="bg-orange-600 px-3 py-3 sm:px-1 md:px-1 rounded-md">search</button>
             </div>
 
         </div>
