--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
                     </label>
                     <div class="join">
                         <input type="text" placeholder="username@site.com"
-                            class="input input-bordered join-item px-6" />
-                        <button class="btn btn-primary join-item px-6">Subscribe</button>
+                            class="input input-bordered join-item lg:px-6 md:px-2 sm:px-1" />
+                        <button class="btn btn-primary join-item md:px-6 sm:md:px-3">Subscribe</button>
                     </div>
                 </fieldset>
             </form>
