--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 </div>
 
             </div>
-            <div id="item1" class="carousel-item relative w-[300] h-[300]">
+            <div id="item1" class="carousel-item relative w-[300] h-[300] sm:h-2/4 w-2/4 md:h-2/4">
                 <img src="images/slider-3.jpg" class="w-full" />
                 <div class="absolute top-2/4 left-96 text-center text-red-500 ">
                     <button class="text-center">know me</button>
